--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,7 +17,9 @@
     <!-- <div class="row">
          
     </div>
-    
+     <div class="row">
+         
+    </div>
     <div class="row" *ngFor="let res of data">
         <div class="col-md-3">
                {{res.id}} - {{res.title}}
@@ -27,6 +29,7 @@
                 
         </div>
     </div>
+<button (click)="addPost()">Add</button>
     <button (click)="addPost()">Add</button> -->
 </div>
 
